--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <LINK REL=StyleSheet HREF="style.css" TYPE="text/css" MEDIA=screen>
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Expertos por Experiencia</h1>
+    <h2>El proceso de investigación inclusiva: un desafío para los nuevos tiempos</h2>
+    <h3>Izaskun Álvarez-Aguado · Paulina Carrasco Delgado · Félix González Carrasco · Katherine Exss Cid · Marcela Jarpa Azagra · Herbert Spencer González · Vanessa Vega Córdova</h3>
+
+    <div class="grid-container">
+        <div class="grid-item">
+            <h1>Expertos por Experiencia</h1>
+        </div>
+        <div class="grid-item">2</div>
+    </div>
+
+
+    <p>Este libro relata la historia de un grupo de personas con discapacidad intelectual que durante los últimos tres años han formado un nuevo equipo de investigación dentro de la universidad. A lo largo de este tiempo sucedieron muchas cosas, pero lo más importante, creemos, es que han pasado de ser asesores a ser socios colaboradores en la investigación como “expertos por experiencia”. Esto significa que han trabajado a la par con los académicos en aquellos asuntos de los cuales saben más que otras personas y que afectan directamente a su calidad de vida.</p>
+    <a href="#" class="button">Llamado a la acción</a>
+    <a href="#" class="button">Link a Amazon</a>
+    <a href="#" class="button">Link a Barnes & Noble</a>
+    <a href="#" class="button">Link a Editorial Ble</a>
+
+    <p>Investigación establecida dentro del proyecto multidisciplnario FondeCyT llamado “Nuevos desafíos para la educación en Chile: Apoyos a la Vida Independiente de adultos con Discapacidad Intelectual o del Desarrollo” N° 1190789</p>
+
+    <p>Contacto: accesibilidad-inclusion@ead.cl</p>
+
+    <p>ISBN: xxxx
+        Ediciones Universitarias
+        Diseño e ilustraciones: María Jesús Osandón, Felipe Meza</p>
+
+
 </body>
 </html>
