--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <div class="grid-item">
             <h1>Expertos por Experiencia</h1>
         </div>
-        <div class="grid-item">2</div>
+        <div class="grid-item">
+            <img src="images/figura1.png" alt="">
+        </div>
     </div>
 
 
