--- a/index.html
+++ b/index.html
@@ -5,37 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <LINK REL=StyleSheet HREF="style.css" TYPE="text/css" MEDIA=screen>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <h1>Expertos por Experiencia</h1>
-    <h2>El proceso de investigación inclusiva: un desafío para los nuevos tiempos</h2>
-    <h3>Izaskun Álvarez-Aguado · Paulina Carrasco Delgado · Félix González Carrasco · Katherine Exss Cid · Marcela Jarpa Azagra · Herbert Spencer González · Vanessa Vega Córdova</h3>
 
-    <div class="grid-container">
-        <div class="grid-item">
-            <h1>Expertos por Experiencia</h1>
-        </div>
-        <div class="grid-item">
-            <img src="images/figura1.png" alt="">
-        </div>
+    <div class="center">
+        <h1>Expertos por Experiencia</h1>
+        <h2>El proceso de investigación inclusiva: un desafío para los nuevos tiempos</h2>
+        <h3>Izaskun Álvarez-Aguado · Paulina Carrasco Delgado · Félix González Carrasco · Katherine Exss Cid · Marcela Jarpa Azagra · Herbert Spencer González · Vanessa Vega Córdova</h3>
+        <img class="main" src="images/figura1.png" alt="">
+    </div>
+    
+    <div class="content">
+        <p class="main-text">Este libro relata la experiencia de un equipo de investigación compuesto por académicos y personas con discapacidad intelectual que, durante los últimos tres años, han trabajado desde un enfoque de investigación inclusiva. Este paradigma asume que las personas con discapacidad intelectual deben ser protagonistas de las investigaciones que les competen. Por eso, a lo largo de este libro se describe el proceso de investigación inclusiva desarrollado por el equipo, abordando sus diferentes etapas, actividades y roles. </p>
+
+        <a href="#" class="button">COMPRAR EN AMAZON</a>
+        <a href="#" class="button">COMPRAR EN OTRO</a>
+
+    <p>Investigación enmarcada dentro del Proyecto Fondecyt Regular Nº1190789 “Nuevos desafíos para la educación en Chile: Apoyos a la Vida Independiente de adultos con Discapacidad Intelectual o del Desarrollo”, financiado por la Agencia Nacional de Investigación y Desarrollo (Chile).</p>
+
+    <ol>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+    </ol>
+
     </div>
 
-
-    <p>Este libro relata la historia de un grupo de personas con discapacidad intelectual que durante los últimos tres años han formado un nuevo equipo de investigación dentro de la universidad. A lo largo de este tiempo sucedieron muchas cosas, pero lo más importante, creemos, es que han pasado de ser asesores a ser socios colaboradores en la investigación como “expertos por experiencia”. Esto significa que han trabajado a la par con los académicos en aquellos asuntos de los cuales saben más que otras personas y que afectan directamente a su calidad de vida.</p>
-    <a href="#" class="button">Llamado a la acción</a>
-    <a href="#" class="button">Link a Amazon</a>
-    <a href="#" class="button">Link a Barnes & Noble</a>
-    <a href="#" class="button">Link a Editorial Ble</a>
-
-    <p>Investigación establecida dentro del proyecto multidisciplnario FondeCyT llamado “Nuevos desafíos para la educación en Chile: Apoyos a la Vida Independiente de adultos con Discapacidad Intelectual o del Desarrollo” N° 1190789</p>
-
-    <p>Contacto: accesibilidad-inclusion@ead.cl</p>
-
-    <p>ISBN: xxxx
-        Ediciones Universitarias
-        Diseño e ilustraciones: María Jesús Osandón, Felipe Meza</p>
-
+    
 
 </body>
 </html>
