--- a/index.html
+++ b/index.html
@@ -8,35 +8,38 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
 
-    <div class="center">
-        <h1>Expertos por Experiencia</h1>
-        <h2>El proceso de investigación inclusiva: un desafío para los nuevos tiempos</h2>
-        <h3>Izaskun Álvarez-Aguado · Paulina Carrasco Delgado · Félix González Carrasco · Katherine Exss Cid · Marcela Jarpa Azagra · Herbert Spencer González · Vanessa Vega Córdova</h3>
-        <img class="main" src="images/figura1.png" alt="">
-    </div>
-    
-    <div class="content">
-        <p class="main-text">Este libro relata la experiencia de un equipo de investigación compuesto por académicos y personas con discapacidad intelectual que, durante los últimos tres años, han trabajado desde un enfoque de investigación inclusiva. Este paradigma asume que las personas con discapacidad intelectual deben ser protagonistas de las investigaciones que les competen. Por eso, a lo largo de este libro se describe el proceso de investigación inclusiva desarrollado por el equipo, abordando sus diferentes etapas, actividades y roles. </p>
+    <section>
+        <div class="content">
+            <div class="info">
+                <h1>Expertos por Experiencia</h1>
+                <h2>El proceso de investigación inclusiva:</h2>
+                <h2>un desafío para los nuevos tiempos</h2>
+                <p>Izaskun Álvarez-Aguado · Paulina Carrasco Delgado · Félix González Carrasco · Katherine Exss Cid ·<br> Marcela Jarpa Azagra · Herbert Spencer González · Vanessa    Vega Córdova</p>
+            </div>
+            <div class="paragraph">
+                <p>Este libro relata la experiencia de un equipo de investigación compuesto por académicos y personas con discapacidad intelectual que, durante los últimos tres años, han trabajado desde un enfoque de <span style="color: #FF910F; font-size: 17pt; font-style: italic; font-weight: 700;">investigación inclusiva</span>. Este paradigma asume que las personas con discapacidad intelectual deben ser <span style="color: #FF910F; font-size: 17pt; font-style: italic; font-weight: 700;">protagonistas de las investigaciones que les competen</span>. Por eso, a lo largo de este libro se describe el proceso de investigación inclusiva desarrollado por el equipo, abordando sus diferentes etapas, actividades y roles.</p>
+                <div class="btns">
+                    <a href="#" class="info-btn-1">Link a Amazon</a>
+                    <a href="#" class="info-btn-2">Link a Otro</a>
+                </div>
+                <p class="bajada">Investigación enmarcada dentro del <span style="font-weight: 700;">Proyecto Fondecyt Regular Nº1190789</span> <span style="font-style: italic;">“Nuevos desafíos para la educación en Chile: Apoyos a la Vida Independiente de adultos con Discapacidad Intelectual o del Desarrollo”</span>, financiado por la <span style="font-weight: 700;">Agencia Nacional de Investigación y Desarrollo (Chile).</span></p>
+                <ul>
+                    <li>ISBN: 978-956-17-0958-4</li>
+                    <li>Ediciones Universitarias de Valparaíso</li>
+                    <li>Diseño e ilustraciones: María Jesús Osandón, Felipe Meza</li>
+                    <li>Contacto: accesibilidad-inclusion@ead.cl</li>
+                </ul>
+                <div class="logos">
 
-        <a href="#" class="button">COMPRAR EN AMAZON</a>
-        <a href="#" class="button">COMPRAR EN OTRO</a>
-
-    <p>Investigación enmarcada dentro del Proyecto Fondecyt Regular Nº1190789 “Nuevos desafíos para la educación en Chile: Apoyos a la Vida Independiente de adultos con Discapacidad Intelectual o del Desarrollo”, financiado por la Agencia Nacional de Investigación y Desarrollo (Chile).</p>
-
-    <ol>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-    </ol>
-
-    </div>
-
-    
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
