--- a/index.html
+++ b/index.html
@@ -23,11 +23,19 @@
             </div>
             <img src="images/IL_Home_grande_Mesa de trabajo 1.png" alt="" class="main">
             <div class="paragraph">
-                <p>Este libro relata la experiencia de un equipo de investigación compuesto por académicos y personas con discapacidad intelectual que, durante los últimos tres años, han trabajado desde un enfoque de <span style="color: #FF910F; font-size: 17pt; font-style: italic; font-weight: 700;">investigación inclusiva</span>. Este paradigma asume que las personas con discapacidad intelectual deben ser <span style="color: #FF910F; font-size: 17pt; font-style: italic; font-weight: 700;">protagonistas de las investigaciones que les competen</span>. Por eso, a lo largo de este libro se describe el proceso de investigación inclusiva desarrollado por el equipo, abordando sus diferentes etapas, actividades y roles.</p>
+                <div class="text">
+                     <p>Este libro relata la experiencia de un equipo de investigación compuesto por académicos y personas con discapacidad intelectual que, durante los últimos tres años, han trabajado desde un enfoque de <span style="color: #FF910F; font-size: 17pt; font-style: italic; font-weight: 700;">investigación inclusiva</span>. Este paradigma asume que las personas con discapacidad intelectual deben ser <span style="color: #FF910F; font-size: 17pt; font-style: italic; font-weight: 700;">protagonistas de las investigaciones que les competen</span>. Por eso, a lo largo de este libro se describe el proceso de investigación inclusiva desarrollado por el equipo, abordando sus diferentes etapas, actividades y roles.</p>
+                </div>
+                <div class="side-img">
+                    <img src="images/Figura-23_cortada.png" class="img-side" alt="">
+                </div>
+                
+            </div>    
                 <div class="btns">
                     <button class="btn-1" id="grad-1">COMPRAR EN AMAZON</button>
                     <button class="btn-2" id="grad-2">COMPRAR EN OTRO</button>
                 </div>
+                <img src="images/descarga_nuevo.png" class="descarga" alt="">
                 <p class="bajada">Investigación enmarcada dentro del <span style="font-weight: 700;">Proyecto Fondecyt Regular Nº1190789</span> <span style="font-style: italic;">“Nuevos desafíos para la educación en Chile: Apoyos a la Vida Independiente de adultos con Discapacidad Intelectual o del Desarrollo”</span>, financiado por la <span style="font-weight: 700;">Agencia Nacional de Investigación y Desarrollo (Chile).</span></p>
                 <ul class="contacto">
                     <li>ISBN: 978-956-17-0958-4</li>
@@ -36,12 +44,11 @@
                     <li>Contacto: accesibilidad-inclusion@ead.cl</li>
                 </ul>
                 <div class="logos">
-                    <img  class="img1" src="images/logos_landing-01.png" alt="">
-                    <img  class="img2" src="images/logos_landing-02.png" alt="">
-                    <img src="images/Escudo_PUCV-2016_Pack-03.png" alt="">
+                    <img class="img1" src="images/logos_landing-01.png" alt="">
+                    <img class="img2" src="images/logos_landing-02.png" alt="">
+                    <img class="img3" src="images/Escudo_PUCV-2016_Pack-03.png" alt="">
                     
                 </div>
-            </div>
         </div>
     </section>
 
