--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 
             </div>    
                 <div class="btns">
-                    <button class="btn-1" id="grad-1">COMPRAR EN AMAZON</button>
-                    <button class="btn-2" id="grad-2">COMPRAR EN OTRO</button>
+                    <div class="bt1"><button class="btn-1" id="grad-1">COMPRAR EN AMAZON</button></div>
+                    <div class="bt2"><button class="btn-2" id="grad-2">COMPRAR EN OTRO</button></div>
                 </div>
                 <img src="images/descarga_nuevo.png" class="descarga" alt="">
                 <p class="bajada">Investigación enmarcada dentro del <span style="font-weight: 700;">Proyecto Fondecyt Regular Nº1190789</span> <span style="font-style: italic;">“Nuevos desafíos para la educación en Chile: Apoyos a la Vida Independiente de adultos con Discapacidad Intelectual o del Desarrollo”</span>, financiado por la <span style="font-weight: 700;">Agencia Nacional de Investigación y Desarrollo (Chile).</span></p>
