--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             <img src="images/IL_Home_grande_Mesa de trabajo 1.png" alt="" class="main">
             <div class="paragraph">
                 <div class="text">
-                     <p>Este libro relata la experiencia de un equipo de investigación compuesto por académicos y personas con discapacidad intelectual que, durante los últimos tres años, han trabajado desde un enfoque de <span style="color: #FF910F; font-size: 17pt; font-style: italic; font-weight: 700;">investigación inclusiva</span>. Este paradigma asume que las personas con discapacidad intelectual deben ser <span style="color: #FF910F; font-size: 17pt; font-style: italic; font-weight: 700;">protagonistas de las investigaciones que les competen</span>. Por eso, a lo largo de este libro se describe el proceso de investigación inclusiva desarrollado por el equipo, abordando sus diferentes etapas, actividades y roles.</p>
+                     <p>Este libro relata la experiencia de un equipo de investigación compuesto por académicos y personas con discapacidad intelectual que, durante los últimos tres años, han trabajado desde un enfoque de <span class="text-span" style="color: #FF910F; font-style: italic; font-weight: 700;">investigación inclusiva</span>. Este paradigma asume que las personas con discapacidad intelectual deben ser <span style="color: #FF910F; font-style: italic; font-weight: 700;">protagonistas de las investigaciones que les competen</span>. Por eso, a lo largo de este libro se describe el proceso de investigación inclusiva desarrollado por el equipo, abordando sus diferentes etapas, actividades y roles.</p>
                 </div>
                 <div class="side-img">
                     <img src="images/Figura-23_cortada.png" class="img-side" alt="">
                 </div>
-                
-            </div>    
+
+            </div>
                 <div class="btns">
                     <div class="bt1"><button class="btn-1" id="grad-1">COMPRAR EN AMAZON</button></div>
                     <div class="bt2"><button class="btn-2" id="grad-2">COMPRAR EN OTRO</button></div>
@@ -47,7 +47,7 @@
                     <img class="img1" src="images/logos_landing-01.png" alt="">
                     <img class="img2" src="images/logos_landing-02.png" alt="">
                     <img class="img3" src="images/Escudo_PUCV-2016_Pack-03.png" alt="">
-                    
+
                 </div>
         </div>
     </section>
