--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>ExE Expertos por experiencia</title>
-    <meta name="description" content="Sitio de difusión del libro 'ExE Expertos por Experiancia: El proceso de investigación inclusiva:
-    un desafío para los nuevos tiempos' de la PUCV" />
+    <meta name="title" content="ExE Expertos por Experiancia: El proceso de investigación inclusiva:
+    un desafío para los nuevos tiempos"
+    <meta name="description" content="Reporte del proceso de investigación inclusiva con un grupo de adultos con discapacidad intelectual; métodos, adaptaciones y herramientas para compartir con la comunidad" />
     <meta name="autor" content="Núcleo de Investigación en Accesibilidad e Inclusión PUCV; Izaskun Álvarez-Aguado, Paulina Carrasco Delgado, Félix González Carrasco, Katherine Exss Cid, Marcela Jarpa Azagra, Herbert Spencer González, Vanessa Vega Córdova" />
     <meta name="keywords" content="libro, ebook, investigación inclusiva, discapacidad intelectual, accesibilidad"/> 
 </head>
