--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
             <h3>Adquiere el libro en formato electrónico</h3>
             <select id="store-selector" class="select-css">
                 <option >Selecciona una tienda</option>
-                <option value="amz">Amazon Kindle Store</option>
-                <option value="brn">Barnes & Noble</option>
-                <option value="cl">Feria Chilena del Libro</option>
+                <option value="amazon">Amazon Kindle Store</option>
+                <option value="apple">Apple Book Store</option>
+                <option value="google">Google Books</option>
+                <option value="siglo">Librería Siglo</option>
+                <option value="casa">Casa del libro</option>
             </select>
             <div class="ribbon ribbon-top-right"><span>pronto</span></div>
         </div>
