--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
             <li>Herbert Spencer González</li>
             <li>Vanessa Vega Córdova</li>
         </ul>
+        <img src="images/logo-nucleo-sq.png" alt="Núcleo de Investigación Accesibilidad & Inclusión">
+        <p>Revisoras</p>
+        <ul class="reviewers">
+            <li>Maria Pallisera</li>
+            <li>Marta Sylvia del Rio Guerra</li>
+            <li>Lorena Paz</li>
+        </ul>
     </header>
 
     <img src="images/ilustracion-home.jpg"
