--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <img src="images/logo-nucleo-sq.png" alt="Núcleo de Investigación Accesibilidad & Inclusión">
         <p>Revisoras</p>
         <ul class="reviewers">
-            <li>Maria Pallisera</li>
+            <li>María Pallisera</li>
             <li>Marta Sylvia del Rio Guerra</li>
             <li>Lorena Paz</li>
         </ul>
