sacar "pronto" de la caja de venta online

--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
 
         <div class="buy box">
             <h3>Adquiere el libro en formato electrónico</h3>
-            <div class="ribbon ribbon-top-right"><span>pronto</span></div>
-            <div id="store-selector"></div>
+            <!--
+            <div class="ribbon ribbon-top-right"><span>pronto</span></div> -->
+            <div id="store-selector"></div> 
         </div>
 
         <img src="images/ilustracion-personas-2.png"
