--- a/index.html
+++ b/index.html
@@ -8,20 +8,12 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
     <LINK REL=StyleSheet
-        HREF="style.css"
+        HREF="css.css"
         TYPE="text/css"
         MEDIA=screen>
-    <link rel="preconnect"
-        href="https://fonts.googleapis.com">
-    <link rel="preconnect"
-        href="https://fonts.gstatic.com"
-        crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
-        rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
-        rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700;900&family=Lora:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
     <title>ExE Expertos por experiencia</title>
     <meta name="title"
         content="ExE Expertos por Experiancia: El proceso de investigación inclusiva:
@@ -101,8 +93,8 @@
             <li>Diseño e ilustraciones: María Jesús Osandón, Felipe Meza</li>
             <li>Contacto: accesibilidad-inclusion@ead.cl</li>
         </ul>
-    </main>
 
+    </main>
     <footer>
         <a href="https://pucv.cl/"
             target="_blank"><img class="img1"
@@ -117,6 +109,15 @@
                 src="images/logo-anid.png"
                 alt="Isotipo de la Agencia Nacional de Investigación"></a>
     </footer>
+
+    <nav class="buy">
+        <a href="https://www.amazon.es/dp/B09NWGB9P2" title="Amazon Kindle Store">Amazon</a>
+        <a href="https://books.apple.com/us/book/expertos-por-experiencia/id1601247900?itsct=books_box_link&itscg=30200&ls=1" title="Apple Book Store">Apple Books</a>
+        <a href="https://books.google.es/books?id=1ahVEAAAQBAJ&lpg=PT5&lr&hl=es&pg=PT5#v=onepage&q&f=false" title="Google Books">Google Books</a>
+        <a href="https://www.jstor.org/stable/j.ctv261rc3b?turn_away=true" title="JSTOR">JSTOR</a>
+        <a href="https://es.scribd.com/book/548390478/Expertos-por-Experiencia-El-proceso-de-investigacion-inclusiva-un-desafio-para-los-nuevos-tiempos" title="Scribid">Scribid</a>
+    </nav>
+    
 </body>
 
 </html>
