BajaLibros en footer

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
         <a href="https://books.google.es/books?id=1ahVEAAAQBAJ&lpg=PT5&lr&hl=es&pg=PT5#v=onepage&q&f=false" title="Google Books">Google Books</a>
         <a href="https://www.jstor.org/stable/j.ctv261rc3b?turn_away=true" title="JSTOR">JSTOR</a>
         <a href="https://es.scribd.com/book/548390478/Expertos-por-Experiencia-El-proceso-de-investigacion-inclusiva-un-desafio-para-los-nuevos-tiempos" title="Scribid">Scribid</a>
+        <a href="https://www.bajalibros.com/ES/Expertos-por-Experiencia-Vanessa-Vega-Cordova-eBook-2054347" title="Scribid">BajaLibros</a>
     </nav>
     
 </body>
